<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InfoActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar_about"/>
<TextView
    android:layout_marginTop="15dp"
    android:gravity="center"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/information_student"
    android:textSize="16pt"
    android:textColor="@color/red"
    android:textStyle="bold|italic"
    app:layout_constraintTop_toBottomOf="@id/toolbar_about"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:id="@+id/tv_title"
    tools:ignore="MissingConstraints" />
    <TextView
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:text="ID STU:"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/tv_fullname"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tv_id_stu"/>
    <TextView
        android:textStyle="bold|italic"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dh52111659"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toEndOf="@id/tv_id_stu"
        android:id="@+id/tv_id_edit"/>
    <TextView
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fullname"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_id_stu"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tv_fullname"/>
    <TextView
        android:textStyle="bold|italic"
        android:layout_margin="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tran_thanh_sang"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_id_edit"
        app:layout_constraintStart_toEndOf="@id/tv_fullname"
        android:id="@+id/tv_name_edit"/>
    <TextView
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/class_stu"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/tv_fullname"
        app:layout_constraintTop_toBottomOf="@id/tv_fullname"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tv_class"/>
    <TextView
        android:textStyle="bold|italic"
        android:layout_margin="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/d21_th09"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name_edit"
        app:layout_constraintStart_toEndOf="@id/tv_class"
        android:id="@+id/tv_class_edit"/>
    <TextView
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/tv_fullname"
        app:layout_constraintTop_toBottomOf="@id/tv_class"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tv_phone_number"/>
    <TextView
        android:textStyle="bold|italic"
        android:layout_margin="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_0376033147"
        android:autoLink="phone"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_class_edit"
        app:layout_constraintStart_toEndOf="@id/tv_class"
        android:id="@+id/tv_phone_edit"/>
    <TextView
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/tv_fullname"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tv_email"/>
    <TextView
        android:textStyle="bold|italic"
        android:layout_margin="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dh52111659_student_stu_edu_vn"
        android:autoLink="email"
        android:textSize="20sp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_edit"
        app:layout_constraintStart_toEndOf="@id/tv_email"
        android:id="@+id/tv_email_edit"/>
    <fragment
        android:id="@+id/map_stu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email_edit"/>
</androidx.constraintlayout.widget.ConstraintLayout>