<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditBranchActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="0dp"
        android:id="@+id/toolbar_edit_branch"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_edit_branch"
        app:layout_constraintBottom_toTopOf="@id/btn_save">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_branch"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp">
                <ImageView
                    android:id="@+id/img_branch"
                    android:layout_width="match_parent"
                    android:src="@drawable/logo_branch_default"
                    android:scaleType="centerCrop"
                    android:layout_height="match_parent"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_add_photo"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_open_in_new_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_photo"
                android:textStyle="italic"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/cv_branch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:id="@+id/til_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_photo"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                tools:ignore="MissingConstraints">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/tie_id"
                    android:textSize="18sp"
                    android:hint="@string/id"
                    android:singleLine="true"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:id="@+id/til_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_id"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                tools:ignore="MissingConstraints">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/tie_name"
                    android:textSize="18sp"
                    android:singleLine="true"
                    android:hint="@string/name"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:id="@+id/til_base"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_name"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                tools:ignore="MissingConstraints">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/tie_base"
                    android:textSize="18sp"
                    android:singleLine="true"
                    android:hint="@string/base"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <Button
        android:id="@+id/btn_save"
        android:theme="@style/Theme.AppCompat.NoActionBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="22sp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>